--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 dependencies = [
     "opentelemetry-proto>=1.25.0",
     "pandas>=2.2.2",
+    "pytest>=8.2.2",
 ]
 requires-python = ">=3.12"
 readme = "README.md"
@@ -20,3 +21,4 @@ build-backend = "pdm.backend"
 
 [tool.pdm]
 distribution = true
+includes = ["src"]
